2001-05-28  Pascal Davoust  <davoustp@yahoo.com>

	* src/double.h: Add (u4) cast to IEEEfloat constructor
	calls to avoid bad code generation with VC++.

2001-05-26  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (Semantic::ProcessConditionalExpression):
	Add a missing return that caused a regression in
	Jikes 1.14. An assertion was being raised when a ?:
	expression mixed a primitive and reference type
	in the second and third operands.

2001-05-17  Chris Abbey  <cabbey@bresnanlink.net>

	* option.cpp:
	* control.cpp: Completed the removal of EBCDIC related
	code that Vadim started in October 1999. (it was all
	dead code after the preprocessor ran anyway.) If support
	for EBCDIC is ever put back in it should be done through
	the API and ICU/iconv.
	* platform.h: replaced comment explaining the U_ enums.

2001-05-13  Chris Abbey  <cabbey@bresnanlink.net>

	Released Jikes 1.14, Happy Mother's Day.

2001-05-13  Chris Abbey  <cabbey@bresnanlink.net>

	* jikes.spec: added %doc for documentation files,
	and changed jikes.1 to jikes.1.gz because the rpm
	build process automatically compresses man pages,
	but doesn't reflect this in the %files section.

2001-05-11  Chris Abbey  <cabbey@bresnanlink.net>

	* src/stream.cpp (Stream::DecodeNextCharacter): fixed
	core fault in parser because we cast a char to a wchar_t
	without preventing sign expansion.

2001-05-11  Chris Abbey  <cabbey@bresnanlink.net>

	* jikes.spec: takes Dave's name out so people stop claiming
	to be him. Also update the version to 1.14

2001-05-10  Chris Abbey  <cabbey@bresnanlink.net>

	* src/option.cpp (Option::Option): make sure classpath,
	bootclasspath, sourcepath and extdirs are not null before
	being handed over to cygwin to convert the paths. Also
	flagged some potential memory leaks.

2001-05-09  Chris Abbey  <cabbey@bresnanlink.net>

	* acinclude.m4:
	* src/config.h.in:
	* src/m4/ac_check_iconv.m4:
	* src/m4/ac_find_encodign.m4:
	* src/m4/ac_try_encoding.m4: add support to probe for